@@ -1,5 +1,10 @@
 2010-02-22  Lluis Sanchez Gual  <lluis@novell.com>
 
+	* SoftDebuggerBacktrace.cs: Don't crash if the debugger
+	  stopped and the current thread could not be found.
+
+2010-02-22  Lluis Sanchez Gual  <lluis@novell.com>
+
 	* Mono.Debugger.Soft.dll:
 	* Mono.Debugger.Soft.dll.mdb: Updated.
 
